--- a/ch01 - Basic Concepts & Configuration/ex02/src/main/resources/application.yml
+++ b/ch01 - Basic Concepts & Configuration/ex02/src/main/resources/application.yml
@@ -2,6 +2,8 @@
 spring:
   application:
     name: ex02
+  profiles:
+      active: default
 
 
 ---
@@ -139,5 +141,3 @@ spring:
         use_sql_comments: true
         hbm2ddl:
           auto: create
-
-
