--- a/ch04  - Mapping II Association Mapping & Writing Repository/ex12/pom.xml
+++ b/ch04  - Mapping II Association Mapping & Writing Repository/ex12/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.18</version>
+        <version>3.3.2</version>
         <relativePath/>
     </parent>
 
@@ -78,7 +78,7 @@
                             <goal>process</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>src/main/generated</outputDirectory>
+                            <outputDirectory>${basedir}/target/generated-sources/annotations</outputDirectory>
                             <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
                             <options>
                                 <querydsl.entityAccessors>true</querydsl.entityAccessors>
