--- a/practice02-bookmall/src/main/resources/application.yml
+++ b/practice02-bookmall/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
 
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://192.168.66.4:3306/bookmall?charset=utf8
-    username: bookmall
-    password: bookmall
+    url: jdbc:mariadb://192.168.66.4:3306/jpadb?charset=utf8
+    username: jpadb
+    password: jpadb
     hikari:
       minimum-idle: 10
       maximum-pool-size: 20
@@ -17,7 +17,7 @@ spring:
     defer-datasource-initialization: false
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MariaDB106Dialect
+        dialect: org.hibernate.dialect.MariaDBDialect
         show_sql: true
         format_sql: true
         use_sql_comments: true
